tests/fail/unreachable.stderr
error: Undefined Behavior: entering unreachable code
  --> RUSTLIB/core/src/hint.rs:LL:CC
   |
LL |     unsafe { intrinsics::unreachable() }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^ entering unreachable code
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: backtrace:
   = note: inside `std::hint::unreachable_unchecked` at RUSTLIB/core/src/hint.rs:LL:CC
note: inside `main` at $DIR/unreachable.rs:LL:CC
  --> $DIR/unreachable.rs:LL:CC
   |
LL |     unsafe { std::hint::unreachable_unchecked() }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

